--- a/app/src/css/Register.css
+++ b/app/src/css/Register.css
@@ -3,11 +3,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #0c0d1f;
   padding: 2rem;
   max-width: 350px;
   width: 100%;
-  color: #ccc;
+  color: var(--custom-opposite);
 }
 
 .register-wrapper h1 {
@@ -22,10 +21,10 @@
 }
 
 .icon-input-wrapper-register input {
-  padding: 0.75rem 2.5rem 0.75rem 1rem;
+  padding: 0.75rem 8rem 0.75rem 1rem;
   border: 2px solid #2c2c44;
   border-radius: 15px;
-  background-color: #0c0d1f;
+  background-color: var(--background);
   color: #eee;
   font-size: 1rem;
   outline: none;
@@ -38,24 +37,26 @@
   top: 50%;
   right: 1rem;
   transform: translateY(-50%);
-  color: #888;
+  color: var(--custom-faded);
   font-size: 1.2rem;
   pointer-events: none;
 }
 
-button[type="submit"],
-button[type="button"],
-button {
+.register-btn {
   width: 100%;
   padding: 0.75rem;
   border: none;
   border-radius: 15px;
-  background-color: #4d66ff;
+  background-color: var(--custom-bluish-purple);
   color: white;
   font-size: 1rem;
   cursor: pointer;
   margin-top: 1rem;
   transition: background-color 0.3s;
+}
+
+.register-btn:hover {
+  background-color: var(--custom-purple);
 }
 
 .register-wrapper p {
@@ -64,13 +65,13 @@ button {
 }
 
 .login-link {
-  color: #4d66ff;
+  color: var(--custom-bluish-purple);
   text-decoration: underline;
   font-weight: 500;
 }
 
 .login-link:hover {
-  color: #0097a7;
+  color: var(--custom-hover);
 }
 
 .divider {
@@ -78,7 +79,7 @@ button {
   align-items: center;
   text-align: center;
   margin: 1.5rem 0;
-  color: #aaa;
+  color: var(--custom-faded);
   font-size: 0.9rem;
 }
 
@@ -86,6 +87,6 @@ button {
 .divider::after {
   content: "";
   flex: 1;
-  border-bottom: 1px solid #aaa;
+  border-bottom: 1px solid var(--custom-faded);
   margin: 0 0.5rem;
 }
