--- a/app/src/css/HeroSection.css
+++ b/app/src/css/HeroSection.css
@@ -1,25 +1,48 @@
-.about-container {
-  padding: 60px 100px;
-  color: var(--custom-opposite);
+.hero-section {
+  position: relative;
+  width: 100%;
+  height: 40vh;
+  color: var(--foreground);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  text-align: center;
+  box-shadow: 0 20px 50px -10px rgba(0, 123, 255, 0.2);
+  gap: 5px;
 }
 
-.about-section {
-  margin-bottom: 60px;
+.hero-section::before {
+  content: "";
+  position: absolute;
+  width: 600px;
+  height: 600px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: radial-gradient(circle, rgba(0, 123, 255, 0.15), transparent 70%);
+  filter: blur(80px);
+  z-index: 0;
 }
 
-.about-section h2 {
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 20px;
+.hero-section h1,
+.hero-section span {
+  position: relative;
+  z-index: 1;
 }
 
-.about-section p {
-  font-size: 16px;
-  line-height: 1.8;
-  color: var(--custom-highlight);
-  text-align: justify;
+.hero-section > h1 {
+  font-size: 3rem;
+  font-weight: bold;
 }
 
-.about-section strong {
-  color: var(--custom-opposite);
+.hero-h1-highlight {
+  color: var(--primary-blue);
+}
+
+.hero-section > span {
+  color: var(--faded);
+  font-size: 1rem;
+  max-width: 700px;
 }
