--- a/app/src/css/Calculators.css
+++ b/app/src/css/Calculators.css
@@ -6,6 +6,11 @@
   gap: 1vw;
 }
 
+.calculators-animated-section {
+  display: flex;
+  flex: 1;
+}
+
 .calculators-card {
   display: flex;
   flex: 1;
@@ -77,7 +82,7 @@
   background-color: var(--card-bg);
   border: 1px solid var(--card-border);
   border-radius: 15px;
-  height: 35vh;
+  height: 30vh;
   display: flex;
   flex-direction: column;
   justify-items: start;
