--- a/app/src/css/Home.css
+++ b/app/src/css/Home.css
@@ -87,19 +87,38 @@
 }
 
 .home-btn-primary {
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 0rem;
+  width: 8vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 }
 
 .home-btn-secondary {
   border: 1px solid var(--card-border);
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 0rem;
+  width: 8vw;
   border-radius: 15px;
   font-weight: bold;
   text-decoration: none;
 }
 
+.home-section-title {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-section-title span {
+  color: var(--primary-blue);
+}
+
 .home-section {
-  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
 }
 
 .home-section h2 {
@@ -108,46 +127,50 @@
 }
 
 .home-card-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 1.5rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1vw;
+  height: 30vh;
 }
 
 .home-card {
-  background-color: var(--custom-search);
-  height: 250px;
-  border-radius: 16px;
+  background-color: var(--card-bg);
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: start;
   color: var(--custom-highlight);
   font-size: 0.95rem;
   text-align: start;
+  flex: 1;
+  height: 100%;
+  border: solid 1px var(--card-border);
+  position: relative;
 }
 
 .home-card-icon {
-  width: 100%;
   height: 40%;
   display: flex;
   align-items: center;
-}
-
-.home-card-icon {
   margin-left: 20px;
 }
 
 .home-card-icon-container {
-  height: 40px;
-  width: 40px;
-  border: var(--card-bg) 1px solid;
-  border-radius: 9999px;
+  background-color: var(--primary-blue-opacity);
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 0 10px rgba(0, 123, 255, 0.6);
+  transition: box-shadow 0.3s;
+  border-radius: 100%;
 }
 
 .home-icon {
-  color: var(--card-bg);
+  color: var(--primary-blue);
 }
 
 .home-card-text {
