--- a/app/src/css/Home.css
+++ b/app/src/css/Home.css
@@ -87,21 +87,23 @@
 }
 
 .home-btn-primary {
-  padding: 0.75rem 0rem;
-  width: 8vw;
+  padding: 0.75rem 0.5rem;
+  width: 10vw;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 5px;
+  font-size: 100%;
 }
 
 .home-btn-secondary {
   border: 1px solid var(--card-border);
-  padding: 0.75rem 0rem;
-  width: 8vw;
+  padding: 0.75rem 0.5rem;
+  width: 10vw;
   border-radius: 15px;
   font-weight: bold;
   text-decoration: none;
+  font-size: 100%;
 }
 
 .home-section-title {
