--- a/app/src/css/Home.css
+++ b/app/src/css/Home.css
@@ -117,10 +117,10 @@
   color: var(--primary-blue);
 }
 
-.home-section {
+.home-animated-section {
   display: flex;
   flex-direction: column;
-  gap: 2vh;
+  gap: 3vh;
 }
 
 .home-section h2 {
@@ -134,7 +134,7 @@
   align-items: center;
   justify-content: center;
   gap: 1vw;
-  height: 30vh;
+  height: 32vh;
 }
 
 .home-card {
@@ -150,6 +150,8 @@
   height: 100%;
   border: solid 1px var(--card-border);
   position: relative;
+  padding-bottom: 2vh;
+  padding-right: 2vw;
 }
 
 .home-card-icon {
@@ -195,39 +197,152 @@
   margin-bottom: 20px;
   margin-left: 20px;
   margin-right: 20px;
+  color: var(--faded);
+}
+
+.home-dashboard-section {
+  margin-top: 15vh;
+}
+
+.home-dashboard-animated-section {
+  display: flex;
+  width: 100%;
+  height: 50vh;
+  max-height: 1000px;
+  position: relative;
+}
+
+.home-dashboard-animated-section > div {
+  height: 100%;
+  display: flex;
+}
+
+.home-dashboard-left {
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 3vh;
+  flex: 2;
+}
+
+.home-dashboard-left h2 {
+  white-space: nowrap;
+}
+
+.home-dashboard-text {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  padding-right: 5vw;
+}
+
+.blue {
+  color: var(--primary-blue);
+}
+
+.faded {
+  color: var(--faded);
+}
+
+.home-dashboard-subtitle {
+  font-size: 1.1rem;
+}
+
+.home-dashboard-btn {
+  padding: 0.75rem 2rem;
+  font-size: 20px;
+  border-radius: 10px;
+}
+
+.home-dashboard-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 2;
+}
+
+.home-dashboard-right img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  object-fit: contain;
+  display: block;
+}
+
+.home-news-section {
+  margin-top: 15vh;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.home-news-animated-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 35vh;
+  gap: 5vh;
 }
 
 .home-news-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 1.5rem;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  gap: 1vw;
 }
 
 .home-news-card {
-  background-color: var(--custom-search);
-  padding: 1rem;
-  border-radius: 16px;
+  background-color: var(--card-bg);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  min-height: 120px;
+  height: 100%;
+  flex: 1;
+  border-radius: 15px;
+  border: 1px solid var(--card-border);
+  position: relative;
+}
+
+.home-news-card {
+  display: flex;
+  padding-bottom: 2vh;
+}
+
+.news-card-img {
+  width: 100%;
+  height: 45%;
+  background-color: blue;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.news-card-text {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  flex: 1;
+  height: 55%;
+  gap: 7px;
+  margin-right: 1vw;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.home-news-title,
+.home-news-source {
+  margin-left: 1vw;
 }
 
 .home-news-title {
-  font-weight: 500;
-  font-size: 1rem;
-  color: var(--custom-opposite);
-  margin-bottom: 0.5rem;
-}
-
-.home-news-source {
-  font-size: 0.85rem;
-  color: var(--custom-faded);
+  height: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: start;
 }
 
 .home-cta {
-  text-align: center;
-  margin-top: 5rem;
+  margin-top: 15vh;
 }
 
 .home-cta h2 {
