--- a/app/src/style.css
+++ b/app/src/style.css
@@ -104,6 +104,7 @@ body {
   cursor: pointer;
   text-decoration: none;
   white-space: nowrap;
+  font-weight: bold;
 }
 
 .secondary-btn:hover {
@@ -115,7 +116,7 @@ body {
 }
 
 .animated-section {
-  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 0.7s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .animated-section-active {
