--- a/app/src/css/Home.css
+++ b/app/src/css/Home.css
@@ -301,6 +301,7 @@
   border-radius: 15px;
   border: 1px solid var(--card-border);
   position: relative;
+  cursor: pointer;
 }
 
 .home-news-card {
@@ -339,6 +340,16 @@
   display: flex;
   align-items: center;
   justify-content: start;
+}
+
+.home-news-source {
+  color: var(--faded);
+}
+
+.home-news-card:hover {
+  box-shadow: 0 0 15px rgba(0, 102, 255, 0.5);
+  transform: translateY(-3px);
+  border: 1px solid var(--primary-blue);
 }
 
 .home-cta {
