--- a/app/src/css/CompoundInterest.css
+++ b/app/src/css/CompoundInterest.css
@@ -1,7 +1,11 @@
 .compound-container {
   padding: 1rem;
   min-height: 20vh;
-  background: linear-gradient(90deg, rgba(6, 10, 22, 1) 0%, rgba(26, 43, 76, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(6, 10, 22, 1) 0%,
+    rgba(26, 43, 76, 1) 100%
+  );
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -36,17 +40,18 @@
   align-items: flex-start;
   padding: 2rem;
   gap: 2rem;
-  background-color: #060A16;
+  background-color: #060a16;
   flex-wrap: wrap;
   position: relative;
-  background-color: #060A16;
+  background-color: #060a16;
+  margin-top: 10vh;
 }
 
 .compound-box-calculator {
   flex: 1;
-  background-color: #10141D;
+  background-color: #10141d;
   padding: 2rem;
-  border: 1px solid #41434A;
+  border: 1px solid #41434a;
   border-radius: 30px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   display: flex;
@@ -58,10 +63,10 @@
 
 .compound-box-graph {
   flex: 1;
-  background-color: #10141D;
+  background-color: #10141d;
   padding: 2rem;
   border-radius: 20px;
-  border: 1px solid #41434A;
+  border: 1px solid #41434a;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   min-width: 300px;
   max-width: 900px;
@@ -93,12 +98,12 @@
 .compound-input-monthly {
   width: 80%;
   background: none;
-  border: 2px solid #41434A;
+  border: 2px solid #41434a;
   outline: none;
   padding: 15px 10px;
   font-size: 16px;
   border-radius: 10px;
-  background-color: #181E2B;
+  background-color: #181e2b;
   margin: 10px;
   box-sizing: border-box;
   color: #fff;
@@ -112,7 +117,7 @@
   overflow: hidden;
   height: 3rem;
   border-radius: 1.5rem;
-  background: #0066FF;
+  background: #0066ff;
   background-size: 400%;
   color: #fff;
   border: none;
@@ -134,7 +139,7 @@
   width: 100%;
   height: 100%;
   border-radius: inherit;
-  background: linear-gradient(82.3deg, #060A16 10.8%, #1A2B4C 94.3%);
+  background: linear-gradient(82.3deg, #060a16 10.8%, #1a2b4c 94.3%);
   transition: all 0.475s;
   z-index: 0;
 }
@@ -148,7 +153,7 @@
   display: flex;
   gap: 0.5rem;
   margin-top: 1rem;
-  border: 2px solid #0066FF;
+  border: 2px solid #0066ff;
   border-radius: 1rem;
   padding: 5px;
   justify-content: space-between;
@@ -177,7 +182,7 @@
 }
 
 .graph-radio input:checked + .graph-label {
-  background: linear-gradient(to right, #0066FF, rgb(255, 255, 255));
+  background: linear-gradient(to right, #0066ff, rgb(255, 255, 255));
   color: white;
 }
 
@@ -187,7 +192,6 @@
   }
 }
 
-
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -195,9 +199,8 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 input[type="number"] {
-  -moz-appearance: textfield; 
+  -moz-appearance: textfield;
 }
-
 
 .compound-resume {
   color: #838896;
@@ -218,17 +221,15 @@ input[type="number"] {
   color: #838896;
   margin-top: 1rem;
   text-align: left;
- 
-  border-radius: 15px;
 
+  border-radius: 15px;
 }
 
 .compound-resume-list {
   list-style: none;
   padding-left: 0;
   margin-top: 1rem;
-color: #838896;
-  
+  color: #838896;
 }
 
 .compound-resume-list li {
@@ -238,5 +239,3 @@ color: #838896;
 .compound-resume-list strong {
   color: #ffffff;
 }
-
-
