--- a/app/src/css/Home.css
+++ b/app/src/css/Home.css
@@ -312,7 +312,7 @@
 .news-card-img {
   width: 100%;
   height: 45%;
-  background-color: blue;
+  background-color: var(--primary-blue);
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
