--- a/app/src/css/SimpleInterest.css
+++ b/app/src/css/SimpleInterest.css
@@ -1,7 +1,11 @@
 .simple-container {
   padding: 1rem;
   min-height: 20vh;
-  background: linear-gradient(90deg, rgba(6, 10, 22, 1) 0%, rgba(26, 43, 76, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(6, 10, 22, 1) 0%,
+    rgba(26, 43, 76, 1) 100%
+  );
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -36,16 +40,17 @@
   align-items: flex-start;
   padding: 2rem;
   gap: 2rem;
-  background-color: #060A16;
+  background-color: #060a16;
   flex-wrap: wrap;
   position: relative;
+  margin-top: 10vh;
 }
 
 .simple-box-calculator {
   flex: 1;
-  background-color: #10141D;
+  background-color: #10141d;
   padding: 2rem;
-  border: 1px solid #41434A;
+  border: 1px solid #41434a;
   border-radius: 30px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   display: flex;
@@ -57,10 +62,10 @@
 
 .simple-box-graph {
   flex: 1;
-  background-color: #10141D;
+  background-color: #10141d;
   padding: 2rem;
   border-radius: 20px;
-  border: 1px solid #41434A;
+  border: 1px solid #41434a;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   min-width: 300px;
   max-width: 900px;
@@ -96,12 +101,12 @@
 .simple-input-monthly {
   width: 80%;
   background: none;
-  border: 2px solid #41434A;
+  border: 2px solid #41434a;
   outline: none;
   padding: 15px 10px;
   font-size: 16px;
   border-radius: 10px;
-  background-color: #181E2B;
+  background-color: #181e2b;
   margin: 10px;
   box-sizing: border-box;
   color: #fff;
@@ -115,7 +120,7 @@
   overflow: hidden;
   height: 3rem;
   border-radius: 1.5rem;
-  background: #0066FF;
+  background: #0066ff;
   background-size: 400%;
   color: #fff;
   border: none;
@@ -137,7 +142,7 @@
   width: 100%;
   height: 100%;
   border-radius: inherit;
-  background: linear-gradient(82.3deg, #060A16 10.8%, #1A2B4C 94.3%);
+  background: linear-gradient(82.3deg, #060a16 10.8%, #1a2b4c 94.3%);
   transition: all 0.475s;
   z-index: 0;
 }
@@ -151,7 +156,7 @@
   display: flex;
   gap: 0.5rem;
   margin-top: 1rem;
-  border: 2px solid #0066FF;
+  border: 2px solid #0066ff;
   border-radius: 1rem;
   padding: 5px;
   justify-content: space-between;
@@ -180,7 +185,7 @@
 }
 
 .graph-radio input:checked + .graph-label {
-  background: linear-gradient(to right, #0066FF, rgb(255, 255, 255));
+  background: linear-gradient(to right, #0066ff, rgb(255, 255, 255));
   color: white;
 }
 
