--- a/app/src/style.css
+++ b/app/src/style.css
@@ -4,8 +4,10 @@
   --foreground: #ffffff;
   --primary-blue: #0066ff;
   --primary-blue-opacity: #0066ff33;
+  --primary-blue-glow: rgba(0, 102, 255, 0.5);
   --card-bg: #10141d;
   --card-border: #41434a;
+  --card-header: #181e2b;
   --faded: rgba(255, 255, 255, 0.7);
   --secondary-btn: #151727;
   --secondary-text: #d1d5db;
@@ -65,6 +67,7 @@ body {
   align-items: center;
   justify-content: center;
   color: var(--foreground);
+  padding: 0px;
   padding-bottom: 10vh;
 }
 
@@ -74,6 +77,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: start;
+  position: relative;
 }
 
 .primary-btn {
@@ -96,7 +100,10 @@ body {
 }
 
 .secondary-btn {
-  transition: all 0.2s ease;
+  transition:
+    color 0.2s ease,
+    border 0.2 ease,
+    border-radius 0.2 ease;
   border-radius: 15px;
   background-color: var(--secondary-btn);
   color: var(--foreground);
@@ -129,4 +136,16 @@ body {
   opacity: 0%;
   transform: translateY(10px);
   filter: blur(8px);
+}
+
+.blue {
+  color: var(--primary-blue);
+}
+
+.green {
+  color: var(--green);
+}
+
+.red {
+  color: var(--red);
 }
