--- a/app/src/css/Market.css
+++ b/app/src/css/Market.css
@@ -84,6 +84,10 @@
   width: 100%;
 }
 
+.market-list-animated-section {
+  margin-top: 5vh;
+}
+
 .market-assets-header {
   display: flex;
   align-items: center;
