--- a/app/src/css/CompoundInterest.css
+++ b/app/src/css/CompoundInterest.css
@@ -209,7 +209,7 @@ input[type="number"] {
   line-height: 1.6;
   background-color: #181e2b;
   padding: 1.5rem;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   border: 1px solid #41434a;
   margin-top: 1.5rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -222,7 +222,7 @@ input[type="number"] {
   margin-top: 1rem;
   text-align: left;
 
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
 }
 
 .compound-resume-list {
