--- a/app/src/css/Calculators.css
+++ b/app/src/css/Calculators.css
@@ -18,7 +18,7 @@
   background-color: var(--card-bg);
   border: solid 1px var(--card-border);
   color: var(--foreground);
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   text-decoration: none;
 }
 
@@ -82,7 +82,7 @@
   width: 100%;
   background-color: var(--card-bg);
   border: 1px solid var(--card-border);
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   height: 30vh;
   display: flex;
   flex-direction: column;
