--- a/app/src/css/Home.css
+++ b/app/src/css/Home.css
@@ -100,7 +100,7 @@
   border: 1px solid var(--card-border);
   padding: 0.75rem 0.5rem;
   width: 10vw;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   font-weight: bold;
   text-decoration: none;
   font-size: 100%;
@@ -139,7 +139,7 @@
 
 .home-card {
   background-color: var(--card-bg);
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -298,7 +298,7 @@
   flex-direction: column;
   height: 100%;
   flex: 1;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   border: 1px solid var(--card-border);
   position: relative;
   cursor: pointer;
