--- a/app/src/css/Login.css
+++ b/app/src/css/Login.css
@@ -27,7 +27,7 @@
 .icon-input-wrapper-login input {
   padding: 0.75rem 8rem 0.75rem 1rem;
   border: 2px solid #2c2c44;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   color: var(--custom-opposite);
   font-size: 14px;
   outline: none;
@@ -52,7 +52,7 @@
   width: 100%;
   padding: 0.75rem;
   border: none;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   background-color: var(--custom-bluish-purple);
   color: white;
   font-size: 1rem;
