--- a/app/src/css/NavBar.css
+++ b/app/src/css/NavBar.css
@@ -117,7 +117,7 @@
   background-color: transparent;
   backdrop-filter: blur(8px);
   border: 1px solid var(--primary-blue);
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   padding: 0.5rem 2rem;
   color: var(--foreground);
   outline: none;
@@ -168,10 +168,10 @@
 }
 
 .home-login-btn {
-  padding: 1rem 2rem;
+  padding: 0.75rem 1.2rem;
   background-color: var(--primary-blue);
   border: none;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   color: var(--foreground);
   font-size: 1rem;
   font-weight: bold;
