--- a/app/src/css/Register.css
+++ b/app/src/css/Register.css
@@ -23,7 +23,7 @@
 .icon-input-wrapper-register input {
   padding: 0.75rem 8rem 0.75rem 1rem;
   border: 2px solid #2c2c44;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   background-color: var(--background);
   color: #eee;
   font-size: 1rem;
@@ -46,7 +46,7 @@
   width: 100%;
   padding: 0.75rem;
   border: none;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   background-color: var(--custom-bluish-purple);
   color: white;
   font-size: 1rem;
