--- a/app/src/css/Wallets.css
+++ b/app/src/css/Wallets.css
@@ -49,7 +49,7 @@
 }
 
 .card {
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
 }
 
 .card-body {
@@ -108,7 +108,7 @@
 .line-chart {
   width: 100%;
   height: 100%;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   display: flex;
   flex-direction: column;
   justify-content: center;
