--- a/app/src/style.css
+++ b/app/src/style.css
@@ -15,6 +15,7 @@
   --red: #ee4443;
   --glass-card: rgba(255, 255, 255, 0.1);
   --glass-border: rgba(255, 255, 255, 0.2);
+  --custom-border-radius: 12px;
 }
 
 [data-theme="light"] {
@@ -84,7 +85,7 @@ body {
   background-color: var(--primary-blue);
   transition: opacity background-color 0.3s;
   box-shadow: 0 4px 15px rgba(0, 102, 255, 0.5);
-  border-radius: 15px;
+  border-radius: 12px;
   font-weight: bold;
   cursor: pointer;
   text-decoration: none;
@@ -95,8 +96,11 @@ body {
 }
 
 .primary-btn:hover {
-  box-shadow: 0 10px 15px rgba(0, 102, 255, 0.5);
   scale: 1.02;
+  box-shadow:
+    0 8px 20px rgba(0, 102, 255, 0.4),
+    0 0 15px var(--primary-blue-glow),
+    0 0 25px rgba(0, 102, 255, 0.5);
 }
 
 .secondary-btn {
@@ -104,7 +108,7 @@ body {
     color 0.2s ease,
     border 0.2 ease,
     border-radius 0.2 ease;
-  border-radius: 15px;
+  border-radius: var(--custom-border-radius);
   background-color: var(--secondary-btn);
   color: var(--foreground);
   border: 1px solid var(--card-border);
